<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory app:title="@string/settings_first_part_title">

        <SwitchPreferenceCompat
            app:icon="@drawable/settings_icon_darkmode"
            app:key="night"
            app:title="@string/settings_first_part_first_option" />
        <SwitchPreferenceCompat
            app:icon="@drawable/settings_icon_notification"
            app:key="notifications"
            app:title="@string/settings_first_part_second_option" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_second_part_title">

        <EditTextPreference
            app:summary="@string/settings_about_second_text"
            app:title="@string/settings_about_first_text" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Login">
        <Preference
            android:key="logout_preference"
            android:title="Logout"
            />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>